--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -18,3 +18,11 @@ h6 {
   margin: 0;
   box-sizing: border-box;
 }
+
+.sun-message {
+  font-size: 12px;
+}
+
+.sun-message .sun-message-text {
+  padding: 10px;
+}
